--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ byId('genBtn').addEventListener('click', ()=>{
       "Item - Pricing 1 : Price Level (Req)": "RRP",
       "Item - Pricing 1 : Quantity (Req)" : "",
       "costing method": "FIFO",
-      "Cost": "";
+      "Cost": "",
       "Drop Ship": "",
       "spec order true/false": "",
       "OrderUp toLevel": "",
